syntax = "proto3";

option go_package = "api/go/proto";
option csharp_namespace = "PersonService.Api";

package personsApi;

service PersonsApi {
  rpc GetPersons(GetPersonsRequest) returns (GetPersonsResponse);
  rpc GetPerson(GetPersonRequest) returns (GetPersonResponse);
}

message GetPersonsRequest {
  int64 offset = 1;
  int32 limit = 2;
}

message GetPersonRequest {
  string id = 1;
}

message GetPersonsResponse {
  repeated Person persons = 1;
}

message GetPersonResponse {
   Person person = 1;
}

message Person {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  bool is_blocked = 4;
}